# LLM_Project

./: agents.py  report.md
history_buff/: README.md  pyproject.toml
history_buff/src/history_buff/: crew.py  gemini_wrapper.py  main.py
history_buff/src/history_buff/config/: agents.yaml  tasks.yaml
history_buff/src/history_buff/tools/: custom_tool.py
