[project]
name = "history_buff"
version = "0.1.0"
description = "history_buff using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
history_buff = "history_buff.main:run"
run_crew = "history_buff.main:run"
train = "history_buff.main:train"
replay = "history_buff.main:replay"
test = "history_buff.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
